--- a/templates/home.html
+++ b/templates/home.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener("DOMContentLoaded", () => {
         document.getElementById("player-form").addEventListener("submit", () => {
-            const myForm = document.getElementById('player-form');
-            const field = document.getElementById('player-name-input');
+            const myForm = document.getElementById("player-form");
+            const field = document.getElementById("player-name-input");
 
-            myForm.action = '/p/' + field.value.toString();
+            myForm.action = "/p/" + field.value.toString();
         });
     });
 </script>
