--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 	<title>SBStats | Home</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="/images/favicon.png">
-	<link href="{{ url_for('style', path='style.css') }}" rel="stylesheet">
+	<link href="/style/style.css" rel="stylesheet">
 </head>
 <body>
 <div id="video-container">
