--- a/templates/stats.html
+++ b/templates/stats.html
@@ -5,8 +5,8 @@
 	<title>{{ player_name }} | SBStats</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="{{ skin_link }}">
-	<link href="{{ url_for('style', path='style.css') }}" rel="stylesheet">
-    <link href="{{ url_for('style', path='tooltip.css') }}" rel="stylesheet">
+	<link href="/style/style.css" rel="stylesheet">
+    <link href="/style/tooltip.css" rel="stylesheet">
 </head>
 <body>
 
