fix(home): Added a trailing slash when generating the stats page URL

--- a/templates/home.html
+++ b/templates/home.html
@@ -48,7 +48,7 @@
         const myForm = document.getElementById("player-form");
         const field = document.getElementById("player-name-input");
 
-        myForm.action = "/p/" + field.value.toString();
+        myForm.action = "/p/" + field.value.toString() + "/";
     });
 </script>
 </body>
