--- a/templates/assets/stylesheet/style.css
+++ b/templates/assets/stylesheet/style.css
@@ -3,6 +3,7 @@
     src: url("../font/minecraftia-regular.ttf");
     font-weight: normal;
     font-style: normal;
+    font-display: optional;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
     src: url("../font/minecraft-enchantment.ttf");
     font-weight: normal;
     font-style: normal;
+    font-display: optional;
 }
 
 :root {
@@ -65,7 +67,7 @@
 html, body {
     width: 100%;
     height: 100%;
-    font-family:Minecraft, sans-serif;
+    font-family: "Minecraft", sans-serif;
 
     /* Background image in case the video is blocked */
     background-image: url("../images/background-image.png");
@@ -167,7 +169,7 @@ a:hover {
 
 #player-form > * {
     height: 50px;
-    font-family: Minecraft, sans-serif;
+    font-family: "Minecraft", sans-serif;
 }
 
 label[for="player-name-input"] {
