--- a/templates/home.html
+++ b/templates/home.html
@@ -43,7 +43,7 @@
 		<a href="/info">More information</a>
 	</div>
 </footer>
-<script>
+<script type="module">
     document.getElementById("player-form").addEventListener("submit", () => {
         const myForm = document.getElementById("player-form");
         const field = document.getElementById("player-name-input");
