fix(skills+chocolate-factory): Fixed skill progression not displaying properly when the player was on the way to the last level. Unique rabbit count is now correctly displayed.

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -438,7 +438,7 @@
             <p class="color-a">
                 Found Rabbits
                 <span class="color-f">
-                    : {{ chocolate_data['collection'].keys() | length }}/457
+                    : {{ chocolate_data['misc']['unique_rabbit'] }}/457
                 </span>
             </p>
         </div>
