--- a/templates/stats.html
+++ b/templates/stats.html
@@ -574,13 +574,7 @@
     {% for rarity in chocolate_data['collection'] %}
         <div class="{{ rarity }}-rabbit-div">
         <h3 class="text-shadow color-f center">
-            {% set count = namespace(value=0) %}
-            {% for rab in chocolate_data['collection'][rarity] %}
-                {% if rab['amount'] > 0 %}
-                    {% set count.value = count.value + 1 %}
-                {% endif %}
-            {% endfor %}
-            {{ rarity }} ({{ count.value }}/{{ chocolate_data['collection'][rarity] | length }})
+            {{ rarity }} ({{ chocolate_data['collection_data'][rarity]["found_unique"] }}/{{ chocolate_data['collection_data'][rarity]["total_unique"] }})
         </h3>
             {% for rabbit in chocolate_data['collection'][rarity] %}
             <div class="icon-text rabbit-div" style="width: auto;">
