fix(chocolate-factory, rift): Fixed an icon path formating for missing rift trophy. Started implementing a dashboard to control the hoppity detailed collection display

--- a/templates/assets/stylesheet/style.css
+++ b/templates/assets/stylesheet/style.css
@@ -472,6 +472,12 @@ footer {
     justify-content: left;
 }
 
+#rabbit-dashboard-rarity {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .parenthesis::before {
     content: "(";
     color: var(--§8);
